objects/Alpha_Prefix_Request__c.object
<CustomObject>
    <fields>
        <fullName>URL_Pre_Cert_Pre_Authorization__c</fullName>
        <formula>IF( ISPICKVAL( National_Pre_Cert_Pre_Auth_Branding__c , &quot;Anthem BC&quot;) ,&quot;https://www.anthem.com/provider/router/home_abc/national-disclaimer/&quot;, 


IF( ISPICKVAL( National_Pre_Cert_Pre_Auth_Branding__c , &quot;Anthem BCBS&quot;) ,&quot;https://www.anthem.com/provider/router/home_abcbs/national-disclaimer/&quot;, 

IF( ISPICKVAL( National_Pre_Cert_Pre_Auth_Branding__c , &quot;Anthem BCBS (VA)&quot;) ,&quot;https://www.anthem.com/provider/router/home_abcbs/national-disclaimer/&quot;, 


IF( ISPICKVAL( National_Pre_Cert_Pre_Auth_Branding__c , &quot;BCBS of Georgia&quot;) ,&quot;https://www.anthem.com/provider/router/home_abcbs/national-disclaimer/&quot;, 


IF( ISPICKVAL( National_Pre_Cert_Pre_Auth_Branding__c , &quot;Empire&quot;),&quot;https://www.empireblue.com/provider/router/home_ebcbs/national-disclaimer/&quot;,

IF( ISPICKVAL( National_Pre_Cert_Pre_Auth_Branding__c , &quot;Local Central Region (IN, OH, KY, MO, WI)&quot;),&quot;https://www.anthem.com/provider/router/home_abcbs/local-disclaimer/&quot;,

IF( ISPICKVAL( National_Pre_Cert_Pre_Auth_Branding__c , &quot;Local CA&quot;),&quot;https://www.anthem.com/provider/router/home_abc/local-disclaimer/&quot;,

IF( ISPICKVAL( National_Pre_Cert_Pre_Auth_Branding__c , &quot;Local CO&quot;),&quot;https://www.anthem.com/provider/router/home_abcbs/local-disclaimer/&quot;,

IF( ISPICKVAL( National_Pre_Cert_Pre_Auth_Branding__c , &quot;Local CT&quot;),&quot;https://www.anthem.com/provider/router/home_abcbs/local-disclaimer/&quot;,

IF( ISPICKVAL( National_Pre_Cert_Pre_Auth_Branding__c , &quot;Local GA&quot;),&quot;https://www.anthem.com/provider/router/home_abcbs/local-disclaimer/&quot;,

IF( ISPICKVAL( National_Pre_Cert_Pre_Auth_Branding__c , &quot;Local ME&quot;),&quot;https://www.anthem.com/provider/router/home_abcbs/local-disclaimer/&quot;,

IF( ISPICKVAL( National_Pre_Cert_Pre_Auth_Branding__c , &quot;Local NV&quot;),&quot;https://www.anthem.com/provider/router/home_abcbs/local-disclaimer/&quot;,

IF( ISPICKVAL( National_Pre_Cert_Pre_Auth_Branding__c , &quot;Local NH&quot;),&quot;https://www.anthem.com/provider/router/home_abcbs/local-disclaimer/&quot;,

IF( ISPICKVAL( National_Pre_Cert_Pre_Auth_Branding__c , &quot;Local NY&quot;),&quot;https://www.empireblue.com/provider/router/home_ebcbs/local-disclaimer/&quot;,

IF( ISPICKVAL( National_Pre_Cert_Pre_Auth_Branding__c , &quot;Local VA&quot;),&quot;https://www.anthem.com/provider/router/home_abcbs/local-disclaimer/&quot;, &quot;&quot;)))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Pre-Cert &amp; Pre-Authorization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriter_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the name of the Underwriter associated with this request.</inlineHelpText>
        <label>Underwriter Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alpha_Prefix_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utilize_Castlight__c</fullName>
        <description>(No) Castlight.</description>
        <inlineHelpText>Select whether the request includes Castlight.</inlineHelpText>
        <label>Utilize Castlight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Products_Networks_Requested__c</fullName>
        <label>Number of Products/Networks Requested</label>
        <summaryForeignKey>Alpha_Prefix_Network__c.Alpha_Prefix_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Alphanumeric Prefix Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Interplan_AM_Approving__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Submitted__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>CIP_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Submitted_Alpha_Prefix_Requests</fullName>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Interplan_AM_Approving__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Submitted__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>CIP_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Entered</value>
        </filters>
        <label>All Submitted Alpha Prefix Requests</label>
    </listViews>
    <listViews>
        <fullName>Completed_Alpha_Prefix_Requests</fullName>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Interplan_AM_Approving__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Submitted__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>CIP_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Request Complete,Prefix Assigned</value>
        </filters>
        <label>Completed Alpha Prefix Requests</label>
    </listViews>
    <listViews>
        <fullName>Incomplete_Submitted_Requests</fullName>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Interplan_AM_Approving__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Submitted__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>CIP_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted to InterPlan,Approved</value>
        </filters>
        <label>Incomplete Submitted Requests</label>
    </listViews>
    <listViews>
        <fullName>Rejected_and_Non_Submitted_Requests</fullName>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Interplan_AM_Approving__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Submitted__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Effective_Date__c</columns>
        <columns>CIP_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Entered,Rejected</value>
        </filters>
        <label>Rejected and Non-Submitted Requests</label>
    </listViews>
    <nameField>
        <displayFormat>APR-{00000}</displayFormat>
        <label>Alphanumeric Prefix Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alphanumeric Prefix Requests</pluralLabel>
    <recordTypes>
        <fullName>Full_Account_Termination</fullName>
        <active>true</active>
        <description>If the prefix involves an Account being terminated.</description>
        <label>Full Account Termination</label>
    </recordTypes>
    <recordTypes>
        <fullName>Migration_New_Prefix_Request</fullName>
        <active>true</active>
        <description>If a prefix involves a migration.</description>
        <label>Migration - New Prefix Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Business</fullName>
        <active>true</active>
        <description>If a prefix is for a New Business engagement.</description>
        <label>New Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Product_Existing_Business</fullName>
        <active>true</active>
        <description>If a prefix is for an existing engagement.</description>
        <label>New Product Existing Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone_Number_or_URL_Change</fullName>
        <active>true</active>
        <description>If the prefix request only involves a phone number or URL change.</description>
        <label>Phone Number or URL Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Return_Unused_Prefix</fullName>
        <active>true</active>
        <description>If an existing prefix needs to be returned.</description>
        <label>Return Unused Prefix</label>
    </recordTypes>
    <recordTypes>
        <fullName>Term_Prefix_Partial_Account_Term</fullName>
        <active>true</active>
        <description>If a prefix involves a Partial Account or Term Prefix.</description>
        <label>Term Prefix/Partial Account Term</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ANA_VR_APR01_AccTypeMustBeSpecif</fullName>
        <active>false</active>
        <description>An Account Type must be specified.</description>
        <errorConditionFormula>AND( !$User.BypassValidation__c , ISPICKVAL( Account_Type__c , &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Account_Type__c</errorDisplayField>
        <errorMessage>An Account Type must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ANA_VR_APR02_ComReqifProfRunOPer24</fullName>
        <active>false</active>
        <description>An explanation is required if the Profile Run-out Period is not 24.</description>
        <errorConditionFormula>AND( !$User.BypassValidation__c , AND( 
 ISBLANK( CommentsTerminations__c ) 
 , 
 Profile_Run_Out_Period_Months__c != 24

))</errorConditionFormula>
        <errorDisplayField>CommentsTerminations__c</errorDisplayField>
        <errorMessage>An explanation is required if the Profile Run-out Period is not 24.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ANA_VR_APR03_InterplanAMPreException</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  !$User.BypassValidation__c , AND(
RecordType.Name = &quot;Migration - New Prefix Request&quot; ||
RecordType.Name = &quot;New Business&quot; ||
RecordType.Name = &quot;New Product Existing Business&quot;,
ISPICKVAL(Status__c, &quot;Prefix Assigned&quot;),
NOT(
$User.LastName = &quot;Bosworth&quot; ||
$User.LastName = &quot;Garibay&quot; ||
($User.LastName = &quot;Hoyt&quot; &amp;&amp; $User.FirstName = &quot;Susan&quot;) ||
($User.LastName = &quot;Jordan&quot; &amp;&amp; $User.FirstName = &quot;Toby&quot;) || 
($User.LastName = &quot;Knapp&quot; &amp;&amp; $User.FirstName = &quot;Patricia&quot;)||
($User.LastName = &quot;Leonard&quot; &amp;&amp; $User.FirstName = &quot;Shannon&quot;)
)
))</errorConditionFormula>
        <errorMessage>Edits When The Status Is Prefix Assigned Can Only Be Completed by Interplan AM Users</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ANA_VR_APR04_MustAddPrdBefSubmitToIP</fullName>
        <active>false</active>
        <description>For Migration, New Business, and New Business Existing Products, user must enter products to submit to InterPlan.</description>
        <errorConditionFormula>AND( !$User.BypassValidation__c ,AND( 
 (OR( RecordType.Name = &quot;Migration - New Prefix Request&quot;,
 RecordType.Name = &quot;New Business&quot;,
 RecordType.Name = &quot;New Product Existing Business&quot;)),
 ISPICKVAL(Status__c, &quot;Submitted to InterPlan&quot;) , 
 	of_Products_Networks_Requested__c = 0))</errorConditionFormula>
        <errorMessage>Please enter Products/Networks in the grid below before Submitting to InterPlan</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ANA_VR_APR05_MustCapPEAcctNamePEYES</fullName>
        <active>false</active>
        <description>If a Private Exchange Account Name = Yes, please enter the name of the Private Exchange Account.</description>
        <errorConditionFormula>AND( !$User.BypassValidation__c , AND( ISPICKVAL( Private_Exchange_Account__c , &quot;Yes&quot;) , 
ISPICKVAL( Private_Exchange_Name__c , &quot;&quot;), 
OR( RecordType.Name = &quot;New Product Existing Business&quot;, 
RecordType.Name = &quot;New Business&quot;, 
RecordType.Name = &quot;Migration - New Prefix Request&quot; )))</errorConditionFormula>
        <errorDisplayField>Private_Exchange_Name__c</errorDisplayField>
        <errorMessage>If a Private Exchange Account applies, please enter the Private Exchange Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ANA_VR_APR06_ProfROPerReqDirecAprv</fullName>
        <active>false</active>
        <description>Director fields must be entered if Profile Period does not equal 24 months.</description>
        <errorConditionFormula>AND( !$User.BypassValidation__c ,AND(
 OR( RecordType.Name = &quot;Full Account Termination&quot; , RecordType.Name = &quot;Term Prefix/Partial Account Term&quot;),
 Profile_Run_Out_Period_Months__c != 24 ,
 OR(ISBLANK( 	Implementations_Director_Approving__c ) , 
 ISBLANK( Operations_Director_Approving__c ),
 ISBLANK( 	Account_Executive_Approving__c ))
))</errorConditionFormula>
        <errorDisplayField>Profile_Run_Out_Period_Months__c</errorDisplayField>
        <errorMessage>Director-level approval is required if the Profile Run-out Period is NOT 24 months. Please specify an Implementation Director, Operations Director, and Account Executive in the fields below to approve this value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ANA_VR_APR07_RollUpCountOnAPNAssign</fullName>
        <active>false</active>
        <description>The Assigned Prefix and Control Plan fields must be filled out in the Product/Network Gridbuddy in order to change Status to &quot;Prefix Assigned&quot;.</description>
        <errorConditionFormula>AND( !$User.BypassValidation__c , AND( NumberofMissingPrefixControlPlans__c != 0,
 ISPICKVAL(Status__c, &quot;Prefix Assigned&quot;),
 OR( RecordType.Name = &quot;Migration - New Prefix Request&quot;,
 RecordType.Name = &quot;New Business&quot;,
 RecordType.Name = &quot;New Product Existing Business&quot; )
))</errorConditionFormula>
        <errorMessage>The Assigned Prefix and Control Plan fields must be filled out in the Product/Network Gridbuddy in order to change Status to &quot;Prefix Assigned&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ANA_VR_APR08_Lock_Record_During_Approval</fullName>
        <active>true</active>
        <description>This validation triggers when any user other than the &quot;Interplan AM Approving&quot; user attempts to edit the record during an Approval process</description>
        <errorConditionFormula>AND(!$User.BypassValidation__c,
ISNULL($User.Interplan_AM_Approving__c),
OR(TEXT(PRIORVALUE(Status__c)) = &quot;Prefix Assigned&quot;, TEXT(PRIORVALUE(Status__c)) = &quot;Request Complete&quot;)
)</errorConditionFormula>
        <errorMessage>This record can only be edited by Interplan SMEs at this time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APR_VR01_InterplanUsersForAnthemEntity</fullName>
        <active>true</active>
        <description>Interplan Users should be selected on them basis of their corresponding Anthem Entity</description>
        <errorConditionFormula>OR (AND(( Anthem_Entity__c == &apos;National Accounts&apos;),  NOT(INCLUDES( Interplan_AM_Approving__r.Interplan_AM_Approving__c , &quot;National Accounts&quot;))) ,  AND(( Anthem_Entity__c == &apos;Local/Large Group&apos;), NOT(INCLUDES( Interplan_AM_Approving__r.Interplan_AM_Approving__c , &quot;Local/Large Group&quot;))), AND(( Anthem_Entity__c == &apos;Labor and Trust&apos;), NOT(INCLUDES( Interplan_AM_Approving__r.Interplan_AM_Approving__c , &quot;Labor and Trust&quot;))))</errorConditionFormula>
        <errorDisplayField>Interplan_AM_Approving__c</errorDisplayField>
        <errorMessage>Interplan Approve User must be in the Anthem Entity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interplan_AM_Approving_Test</fullName>
        <active>false</active>
        <errorConditionFormula>Interplan_AM_Approving__r.FirstName &lt;&gt; &quot;Brenda&quot;</errorConditionFormula>
        <errorDisplayField>Interplan_AM_Approving__c</errorDisplayField>
        <errorMessage>You must select an Interplan AM Approving  user.</errorMessage>
    </validationRules>
</CustomObject>